--- a/index.html
+++ b/index.html
@@ -176,7 +176,17 @@
 
                 @media(max-width:230px) {
 
+:root {
+                        --chat-h: 28vh;
+                }
 
+                html,
+                body {
+                        height: 100%;
+                        margin: 0;
+                        font-family: system-ui, SegoeUI, Roboto, Arial;
+                        background: #000;
+                }
                         .scene {
                                 width: 100%;
                                 height: 100%;
@@ -672,6 +682,7 @@ document.addEventListener('click', () => {
 
 
 </html>
+
 
 
 
